ajout page CPT Sortie-moto

--- a/pages/landing-Sortie-moto.html
+++ b/pages/landing-Sortie-moto.html
@@ -215,7 +215,7 @@
                                 sur-mesure</span> avec des champs spécifiques.</p>
                         <p>Pour ce projet en particulier, j'ai codé un CPT permettant d'ajouter des tutoriels d'entretien moto.
                         </p>
-                        <a href="https://dev-rentmypark.pantheonsite.io/villes/aix-en-provence/"
+                        <a href="https://dev-sortie-moto.pantheonsite.io/tutorielmoto/845/"
                             class="sim-btn btn-hover-new" target="_blank">Voir le CPT</a>
                     </div>
                 </div>
