--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                 <div class="col-md-6">
                     <div class="d-flex justify-content-center">
-                        <img class="img-size pt-3" src="./images/Olivier_Caccia.png" alt="">
+                        <img class="img-size pt-3 " src="./images/Olivier_Caccia.png" alt="">
                     </div>
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -574,12 +574,12 @@
                 </div>
             </div>
         </div>
-    <div id="experience" class="section wb">
+    <!-- <div id="experience" class="section wb">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Expériences</h3>
-            </div>
-            <div class="row">
+            </div> -->
+            <!-- <div class="row">
                 <div class="col-md-6 offset-md-6 pl-md-0 mb-3 mb-md-0">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body experience-bg">
@@ -598,8 +598,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+            </div> -->
+            <!-- <div class="row">
                 <div class="col-md-6 text-right pr-md-0 mb-3 mb-md-0">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body experience-bg">
@@ -618,8 +618,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+            </div> -->
+            <!-- <div class="row">
                 <div class="col-md-6 offset-md-6 pl-md-0 mb-3 mb-md-0">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body experience-bg">
@@ -638,13 +638,15 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
            
-        </div><!-- end container -->
-    </div><!-- end section -->
+        <!-- </div> -->
+        <!-- end container -->
+    <!-- </div> -->
+    <!-- end section -->
 
     <!-- FOOTER -->
-    <footer id="contact" class="section db">
+    <footer id="contact" class="section db mt-5">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Restons en contact !</h3>
