modification des marge

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-6 text-right pr-md-0 mb-3 mb-md-0">
+                <div class="col-md-6 text-right pr-md-0 mb-3 mb-md-5">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <h4 class="h5 green-color">Formation en développement web full-stack</h4>
@@ -506,7 +506,7 @@
         <!-- Job Experience Start -->
         <div class="experience" id="experience">
             <div class="container">
-                <header class="section-header">
+                <header class="section-header mt-5">
                     <div class="section-title text-center">
                         <h3>Expériences</h3>
                     </div>
