correction des majuscules dans expériences

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                                         <li>- Entretien des espaces verts et parking</li>
                                         <li>- Décapage des parties communes</li>
                                         <li>- N'éttoyages des vitres des copropriétées</li>
-                                        <li>- brillance des inoxs des ascensseurs</li>
+                                        <li>- Brillance des inoxs des ascensseurs</li>
 
 
         
@@ -559,7 +559,7 @@
                             Montpellier (34)</h4>
                             <h4 class="exp-designation">Plombier</h4>
                             <p class="exp-detail">
-                                <p class="font-italic main-color"> installation, réparation plomberie sanitaire et chauffage
+                                <p class="font-italic main-color">Installation, réparation plomberie sanitaire et chauffage
                                     <ul class="list-unstyled">
                                         <li>- Réparation chauffe-eau, toilettes, tuyauterie</li>
                                         <li>- Coupe, soudure et pose des tuyaux</li>
