--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </nav>
 
-    <section id="home" class="main-banner parallaxie">
+    <section id="home" class="main-banner parallaxie ">
         <div class="heading">
             <h1 class="">Olivier Caccia</h1>
             <h2 class="cd-headline clip is-full-width text-white ml3">
@@ -455,14 +455,14 @@
         </div>
     </div>
 
-    <div id="studies" class="section lb">
+    <div id="studies" class="section lb ">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Formation</h3>
             </div>
 
             <div class="row">
-                <div class="col-md-6 text-right pr-md-0 mb-3 mb-md-5">
+                <div class=" col-md-6 text-right pr-md-0 mb-3 mb-md-5">
                     <div class="card border-0 shadow-sm">
                         <div class="card-body">
                             <h4 class="h5 green-color">Formation en développement web full-stack</h4>
@@ -477,7 +477,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-6 pl-md-0 mb-3 mb-md-0">
                     <div class="card border-0 shadow-sm">
-                        <div class="card-body">
+                        <div class="card-body exp-column">
                             <h4 class="h5 green-color">CAP Maintenance des véhicules automobiles
                                 Option A voitures particulières</h4>
                             <p class="text-muted">2008 à 2010</p>
