removal of angular skills

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="col-md-6">
                     <div class="message-box">
                         <h2>À propos</h2>
-                        <p>Lorem ipsum dolor sit amet.nctio numquam sit molestiae molestiae id incidunt reiciendis vel unde corporis. Et pariatur labore aut reprehenderit adipisci non voluptatem internos est minima odit aut harum sunt. Et consectetur maiores ea recusandae eaque aut pariatur totam aut explicabo saepe qui praesentium placeat. </p>
+                        <p>Passionné depuis longtemps par l’informatique et les nouvelles technologie, j’ai décidé de faire une reconversion professionnelle et d’effectuer une formation de développeur full stack à Passerelle Numérique d’École Centrale Marseille sur une durée de 1 an. </p>
                         <p>J'apprécie le travail en équipe et je suis toujours disponible pour donner un coup de main !
                         </p>
 
@@ -164,8 +164,8 @@
                                 class="devicon-javascript-plain tech-logo mr-2"></i>JavaScript</li>
                         <li class="d-flex align-items-center mb-2"><i
                                 class="devicon-bootstrap-plain tech-logo mr-2"></i>Bootstrap</li>
-                        <li class="d-flex align-items-center mb-2"><i
-                                class="devicon-angularjs-plain tech-logo mr-2"></i>Angular</li>
+                        <!-- <li class="d-flex align-items-center mb-2"><i
+                                class="devicon-angularjs-plain tech-logo mr-2"></i>Angular</li> -->
                         </ul>
                         </p>
                     </div>
@@ -198,8 +198,8 @@
                         <ul class="list-unstyled">
                             <li class="d-flex align-items-center mb-2"><i
                                 class="devicon-mysql-plain tech-logo mr-2"></i>MySQL</li>
-                        <li class="d-flex align-items-center mb-2"><i
-                                class="devicon-mongodb-plain tech-logo mr-2"></i>MongoDB</li>
+                        <!-- <li class="d-flex align-items-center mb-2"><i
+                                class="devicon-mongodb-plain tech-logo mr-2"></i>MongoDB</li> -->
 
                         </ul>
                         </p>
